--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,13 @@ SQLAlchemy==2.0.23
 python-dotenv==1.0.0
 requests==2.31.0
 pydub==0.25.1
+# Flask and dependencies
+Flask==2.0.1
+click==8.0.1
+Werkzeug==2.0.1
+itsdangerous==2.0.1
+Jinja2==3.0.1
+MarkupSafe==2.0.1
+# Audio processing
+numpy==1.24.3
+scipy==1.10.1
