adding LLM functionatily

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ SQLAlchemy==2.0.23
 python-dotenv==1.0.0
 requests==2.31.0
 pydub==0.25.1
+openai==1.6.0  # For OpenAI integration
 # Flask and dependencies
 Flask==2.0.1
 click==8.0.1
